userテストコード

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,18 +3,13 @@ ja:
     models:
       user: ユーザー
     attributes:
+      food:
+        title: タイトル
+        catch_copy: キャッチコピー
+        menu: レシピ
+        image: 画像
       user:
         name: 名前
         email: メールアドレス
         profile: プロフィール
         password: パスワード
-ja:
-  activerecord:
-    models:
-      user: ユーザー
-    attributes:
-      food:
-        title: タイトル
-        catch_copy: キャッチコピー
-        menu: メニュー
-        image: 画像
